--- a/pages/home/style.css
+++ b/pages/home/style.css
@@ -45,7 +45,7 @@
   font-size: 2em;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 769px) {
   .header {
     flex-flow: row;
     align-items: flex-start;
@@ -58,5 +58,90 @@
 
   .header__weather {
     flex-flow: column;
+  }
+}
+
+/* MAIN */
+
+.main {
+  display: flex;
+  flex-flow: column;
+  align-items: normal;
+  font-size: calc(1vw + 1vh + 0.5vmin);
+  margin-bottom: 32px;
+}
+
+.main > div {
+  flex-basis: 100%;
+}
+
+.main img {
+  max-width: 100%;
+}
+
+.main .mission-statement {
+  flex-basis: 90%;
+  margin-right: 10%;
+  text-align: right;
+  color: #222;
+}
+
+.main .mission-statement > * {
+  line-height: calc(100% + 0.5em);
+}
+
+.main .mission-statement::first-line {
+  font-size: 1.5em;
+}
+
+.main .mission-statement > span {
+  display: block;
+  font-family: "Mark Pro Bold";
+  color: #c12d18;
+}
+
+.main .mission-statement > span + span {
+  font-size: 2em;
+}
+
+@media screen and (min-width: 769px) {
+  .main {
+    flex-flow: row nowrap;
+    align-items: center;
+    margin-bottom: 0;
+  }
+
+  .main > div {
+    flex-basis: 40%;
+    margin-right: 12%;
+  }
+
+  .main .mission-statement {
+    flex-basis: 40.5%;
+    margin-right: 7.5%;
+  }
+
+  .main .mission-statement > * {
+    line-height: normal;
+  }
+
+  .main .mission-statement::first-line {
+    font-size: 1em;
+  }
+
+  .main .mission-statement > span + span {
+    font-size: 1.25em;
+  }
+}
+
+@media screen and (min-width: 1120px) {
+  .main > div {
+    flex-basis: 32%;
+    margin-right: 18%;
+  }
+
+  .main .mission-statement {
+    flex-basis: 52.5%;
+    margin-right: 7.5%;
   }
 }
