refactor: smaller size to header strong tags

--- a/pages/home/style.css
+++ b/pages/home/style.css
@@ -59,6 +59,14 @@
   .header__weather {
     flex-flow: column;
   }
+
+  .header__time .clock {
+    font-size: 4.25em;
+  }
+
+  .header__weather .degree {
+    font-size: 1.5em;
+  }
 }
 
 /* MAIN */
