--- a/home/style.css
+++ b/home/style.css
@@ -8,7 +8,7 @@
   font-size: calc(1vw + 1vh + 0.5vmin);
 }
 
-.header > div {
+.header > div + div {
   margin-top: 16px;
 }
 
@@ -52,7 +52,7 @@
     justify-content: space-between;
   }
 
-  .header > div {
+  .header > div + div {
     margin-top: 0;
   }
 
