--- a/signup/style.css
+++ b/signup/style.css
@@ -37,8 +37,13 @@ body {
   width: 100%;
 }
 
+.container .logo-wrapper {
+  text-align: center;
+}
+
 .container .logo-wrapper > img {
   max-width: 100%;
+  text-align: center;
 }
 
 .container > p {
