--- a/home/style.css
+++ b/home/style.css
@@ -1,3 +1,10 @@
+.outer-container {
+  display: flex;
+  flex-flow: column;
+
+  height: 100vh;
+}
+
 /* HEADER */
 
 .header {
@@ -42,30 +49,28 @@
 
 .header__weather .degree {
   font-family: "Mark Pro Bold", sans-serif;
-  font-size: 2em;
+  font-size: 4em;
 }
 
 @media screen and (min-width: 769px) {
   .header {
-    flex-flow: row;
+    flex: 1;
+    flex-direction: row;
     align-items: flex-start;
     justify-content: space-between;
   }
 
-  .header > div + div {
-    margin-top: 0;
-  }
-
-  .header__weather {
-    flex-flow: column;
-  }
-
   .header__time .clock {
-    font-size: 4.25em;
+    font-size: 4em;
   }
 
   .header__weather .degree {
-    font-size: 1.5em;
+    font-size: 1.75em;
+  }
+
+  .header__weather {
+    display: flex;
+    flex-flow: column;
   }
 }
 
@@ -73,29 +78,22 @@
 
 .main {
   display: flex;
-  flex-flow: column;
-  align-items: normal;
+  flex-direction: column;
   font-size: calc(1vw + 1vh + 0.5vmin);
-  margin-bottom: 32px;
 }
 
-.main > div {
-  flex-basis: 100%;
-}
-
-.main img {
+.main .logo-wrapper img {
   max-width: 100%;
 }
 
-.main .mission-statement {
-  flex-basis: 90%;
-  margin-right: 10%;
-  text-align: right;
-  color: #222;
+.main .mission-wrapper {
+  margin: 0 7.5% 0 0;
 }
 
-.main .mission-statement > * {
-  line-height: calc(100% + 0.5em);
+.main .mission-statement {
+  width: 100%;
+  text-align: right;
+  margin-bottom: 35px;
 }
 
 .main .mission-statement::first-line {
@@ -112,45 +110,50 @@
   font-size: 2em;
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
   .main {
-    flex-flow: row nowrap;
+    flex: 3.5;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    overflow: hidden;
+  }
+
+  .main .logo-wrapper {
+    display: flex;
+    flex-flow: column;
+    align-items: stretch;
+    justify-content: center;
+    flex: 32%;
+  }
+
+  .main .logo-wrapper img {
+    width: 100%;
+    max-width: 370px;
+  }
+
+  .main .mission-wrapper {
+    flex: 60.5%;
+    display: flex;
     align-items: center;
-    margin-bottom: 0;
   }
 
-  .main > div {
-    flex-basis: 40%;
-    margin-right: 12%;
-  }
-
-  .main .mission-statement {
-    flex-basis: 40.5%;
-    margin-right: 7.5%;
-  }
-
-  .main .mission-statement > * {
-    line-height: normal;
+  .main .mission-wrapper > p {
+    padding-bottom: 3em;
   }
 
   .main .mission-statement::first-line {
-    font-size: 1em;
+    font-size: 1.25em;
   }
 
   .main .mission-statement > span + span {
-    font-size: 1.25em;
+    font-size: 1.75em;
   }
 }
 
-@media screen and (min-width: 1120px) {
-  .main > div {
-    flex-basis: 32%;
-    margin-right: 18%;
-  }
-
-  .main .mission-statement {
-    flex-basis: 52.5%;
-    margin-right: 7.5%;
+@media screen and (min-width: 1050px) {
+  .main .logo-wrapper {
+    justify-content: flex-start;
   }
 }
 
@@ -176,16 +179,21 @@
 }
 
 .footer .refresh-countdown {
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
-  height: 50px;
+  justify-content: center; */
+  flex: 1;
   font-size: 14px;
+  text-align: center;
+}
+
+.footer .refresh-countdown > span {
+  display: inline-block;
+  width: 100px;
+  vertical-align: middle;
 }
 
 .footer .refresh-countdown > span:first-child {
-  width: 100px;
-  margin-right: 16px;
   text-align: right;
 }
 
