--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ body {
 .container {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-direction: column;
   width: 70%;
   height: 100%;
@@ -46,7 +46,7 @@ body {
 }
 
 .container > p {
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
   font-size: calc(2vw + 2vh + 1vmin);
 }
 
@@ -77,9 +77,7 @@ body {
   margin-bottom: 1em;
 }
 
-.container .form .user,
-.container .form .password {
-  position: relative;
+.container .form .user {
   margin-bottom: 2em;
 }
 
@@ -98,6 +96,11 @@ body {
 .container .form input.error,
 .container .form input.error {
   border: 1px solid #e9b425;
+}
+
+.container .form .user,
+.container .form .password {
+  position: relative;
 }
 
 .container .form .user > img,
@@ -119,9 +122,10 @@ body {
 }
 
 .container .form fieldset > .notify {
-  height: 2.5em;
-  margin: 0 auto 1em auto;
+  height: 50px;
+  margin: 16px auto;
   text-align: center;
+  vertical-align: middle;
   color: #e9b425;
 }
 
