--- a/home/style.css
+++ b/home/style.css
@@ -33,6 +33,7 @@
 .header__time .clock {
   font-family: "Mark Pro Bold", sans-serif;
   font-size: 6em;
+  font-weight: 700;
   line-height: 100%;
 }
 
@@ -50,6 +51,7 @@
 .header__weather .degree {
   font-family: "Mark Pro Bold", sans-serif;
   font-size: 4em;
+  font-weight: 700;
 }
 
 @media screen and (min-width: 769px) {
@@ -102,7 +104,8 @@
 
 .main .mission-statement > span {
   display: block;
-  font-family: "Mark Pro Bold";
+  font-family: "Mark Pro Bold", sans-serif;
+  font-weight: 700;
   color: #c12d18;
 }
 
